# flask-simple-login

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  run_debug_server.sh  setup.cfg  test_app.py
.github/workflows/: buildpackage.yml  staticanalysis.yml  tests.yml
flask_simple_login/: __init__.py  admin.py  db.py  users.py  web.py
templates/: base.html  index.html  login.html  logout.html  restricted.html
tests/: test_admin.py
