[metadata]
name = Flask-Simple-Login
version = 0.1.dev1
description = Simple login system for Flask
long_description = file: README.rst
license = BSDv2
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages =
    flask_simple_login
install_requires =
    Flask
    flask-login
    Flask-WTF
    wtforms
    wtforms_components
    werkzeug
    flask-talisman
    flask-debugtoolbar
    pre-commit
    bandit


[options.entry_points]
console_scripts =
    flask-simple-login-gen-user-file-line = flask_simple_login.users:print_user_file_line_command
