[metadata]
name = Flask-Simple-Login
version = 3.0.1
description = Simple login system for Flask
long_description = file: README.rst
license = BSDv2
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages =
    flask_simple_login
install_requires =
    Flask
    flask-login
    Flask-WTF
    wtforms
    wtforms_components
    werkzeug
    flask-talisman
    flask-debugtoolbar
    pre-commit
    bandit

[options.extras_require]
SQLAlchemy =
    SQLAlchemy>=2.0.0
    Flask-SQLAlchemy>=3.1.0
