[metadata]
name = Flask-Simple-Login
version = 3.1.2
description = Simple login system for Flask
long_description = Simple login system for Flask that can be used with a flat-file or SQLAlchemy user info storage backend
license = BSDv2
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages =
    flask_simple_login
install_requires =
    Flask
    flask-login
    Flask-WTF
    wtforms
    wtforms_components
    werkzeug
    flask-talisman
    flask-debugtoolbar
    pre-commit
    bandit

[options.extras_require]
SQLAlchemy =
    SQLAlchemy>=2.0.0
    Flask-SQLAlchemy>=3.1.0
